Modified readme.mdfor better readability, added authentication to overview flow changed postman collection after authentication addition
